<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/frag_edittextview" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/frag_titleEditrl"
        android:orientation="vertical"
        android:elevation="15dp"
        android:background="@color/lightblue"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/lightblue"/>

        <EditText
            android:id="@+id/frag_titleEdit"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:hint="@string/entertitle"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:singleLine="true"
            android:maxLength="10"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_width="320dp"
            android:layout_height="50dp"/>
    </RelativeLayout>

    <LinearLayout
        android:elevation="15dp"
        android:id="@+id/frag_edittext"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="70dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center"
            android:elevation="5dp"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/lightingpink"/>
        <androidx.core.widget.NestedScrollView
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/frag_textEditll"
                android:orientation="vertical"
                android:background="@drawable/curcletextlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:background="@null"
                    android:id="@+id/frag_textEdit"
                    android:singleLine="false"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entersomething"/>
                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_add_24"
                    android:background="@drawable/buttonback"
                    android:id="@+id/frag_addtitleimg"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/frag_alarm"
        android:elevation="15dp"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="75dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/frag_setAlarm"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:background="@drawable/edittext_back"
            android:layout_width="wrap_content"
            android:layout_height="400dp">



            <DatePicker
                android:id="@+id/frag_datePicker"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_width="wrap_content"
                android:layout_height="160dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="160dp">

                <TimePicker
                    android:timePickerMode="spinner"
                    android:id="@+id/frag_timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"/>

                <LinearLayout
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp">

                    <TextView
                        android:id="@+id/frag_textSizeN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/textSize"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:id="@+id/frag_textSize"
                        android:maxLength="2"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:inputType="number" />

                    <Button
                        android:background="@drawable/curclestyle"
                        android:id="@+id/frag_setTextSize"
                        android:layout_gravity="center"
                        android:layout_width="50dp"
                        android:layout_height="50dp"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/frag_textEditSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/frag_textColorN"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/textColor"/>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/frag_textBlue"
                            android:layout_margin="5dp"
                            android:background="@color/blue"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                        <Button
                            android:id="@+id/frag_textRed"
                            android:layout_margin="5dp"
                            android:background="@color/red"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                        <Button
                            android:id="@+id/frag_textGreen"
                            android:layout_margin="5dp"
                            android:background="@color/green"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                        <Button
                            android:id="@+id/frag_textYellow"
                            android:layout_margin="5dp"
                            android:background="@color/yellow"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:elevation="2dp"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="250dp"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/frag_confirmView"
                android:background="@color/skyblue"
                android:layout_gravity="center"
                android:layout_width="70dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/frag_confirmAlarm"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/setalarm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:elevation="20dp"
        android:id="@+id/frag_confirm"
        android:text="@string/confirm"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@color/white"/>

</RelativeLayout>