<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/edittextview" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:elevation="15dp"
        android:id="@+id/edittext"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/titleEditrl"
            android:orientation="vertical"
            android:elevation="10dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <ImageView
                android:id="@+id/popback"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_black"/>
            <ImageView
                android:id="@+id/popconfirm"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/ic_baseline_playlist_add_check_24"/>
            <EditText
                android:layout_alignParentBottom="true"
                android:singleLine="true"
                android:maxLength="15"
                android:background="@null"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:id="@+id/titleEdit"
                android:textStyle="bold"
                android:hint="@string/entertitle"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_width="320dp"
                android:layout_height="50dp"/>
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/textEditll"
                android:orientation="vertical"
                android:background="@drawable/curcletextlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:background="@null"
                    android:id="@+id/textEdit"
                    android:singleLine="false"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/entertext"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_baseline_wallpaper_24"
                android:scaleType="center"
                android:id="@+id/addtitleimg"
                android:layout_width="100dp"
                android:layout_height="100dp" />
    </LinearLayout>


    <LinearLayout
        android:elevation="15dp"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:id="@+id/alarm"
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:id="@+id/setAlarm"
            android:layout_width="250dp"
            android:layout_height="400dp">



            <DatePicker
                android:id="@+id/datePicker"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_width="wrap_content"
                android:layout_height="160dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="160dp">

                <TimePicker
                    android:timePickerMode="spinner"
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"/>

                <LinearLayout
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp">

                <TextView
                    android:id="@+id/textSizeN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/textSize"
                    android:textStyle="bold" />

                <EditText
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/textSize"
                    android:maxLength="2"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:inputType="number" />

                <Button
                    android:background="@drawable/curclestyle"
                    android:id="@+id/setTextSize"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/textEditSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textColorN"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/textColor"/>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/textBlue"
                            android:layout_margin="5dp"
                            android:background="@color/blue"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                        <Button
                            android:id="@+id/textRed"
                            android:layout_margin="5dp"
                            android:background="@color/red"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                        <Button
                            android:id="@+id/textGreen"
                            android:layout_margin="5dp"
                            android:background="@color/green"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                        <Button
                            android:id="@+id/textYellow"
                            android:layout_margin="5dp"
                            android:background="@color/yellow"
                            android:layout_width="30dp"
                            android:layout_height="30dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="end"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="250dp"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/confirmView"
                android:background="@drawable/colorful_bar"
                android:layout_gravity="center"
                android:layout_width="70dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/confirmAlarm"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>